2006-07-30 svu

	* libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_private_xkb.h: patching mismatch between
	declarations and functions. Fixing
	http://bugzilla.gnome.org/show_bug.cgi?id=349275

2006-07-29 svu

	* xkeyboard_config.c: sanity patch, fixing
	http://bugzilla.gnome.org/show_bug.cgi?id=346980

2006-07-01 svu

	* autogen.sh, configure.in, gtk-doc.make: Make life better for people
	building without gtkdoc.

2006-07-01 svu

	* libxklavier.pc.in: added missing Cflags, Libs

2006-06-30 svu

	* libxklavier/xklavier.c, libxklavier/xklavier_config_xmm.c,
	libxklavier/Makefile.am, configure.in: Small fix for xmodmap,
	configure script gives more info about the configuration, at the end.

2006-06-04 svu

	* libxklavier/xklavier_props.c: fixed default options handling,
	the gchar** array changed from NULL to g_new0( char*, 1)

2006-05-20 svu

	* configure.in,
	libxklavier/Makefile.am,
	libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_dump.c,
	libxklavier/xklavier_evt_xkb.c,
	libxklavier/xklavier_private_xkb.h,
	libxklavier/xklavier_xkb.c: xkb_headers -> libxkbfile,
	linking to xkbfile is also optional. 
	Thanks to Thomas Vander Stichele

>>>>>>> 1.44
2006-04-30 svu

	* autogen.sh: fail on autoconf/automake errors,
	thanks to Thomas Stichele

2006-04-22 svu

	* libxklavier/*.c:
	* tests/*.c: fixing gcc 2.95 compilation,
	thanks to Jens Granseuer

2006-04-18 svu

	* NEWS: preparing 2.91

2006-04-12 svu

	* libxklavier/xklavier_config.c,
	libxklavier/xklavier_config_xkb.c,
	libxklavier/xklavier_evt.c,
	libxklavier/xklavier_evt_xmm.c,
	libxklavier/xklavier_private.h,
	libxklavier/xklavier_props.c: syncing with 2.x fixes

2006-03-12 svu
	
	* everything: branching 2.x series, merging GLIBing branch to HEAD

2006-03-12 svu
	
	* everything: branching 2.x series, merging GLIBing branch to HEAD

2006-03-12 svu
	
	* everything: branching 2.x series, merging GLIBing branch to HEAD

2006-03-12 svu
	